# abcsql

./: LICENSE  README.md
abcsql-main/: Cargo.toml  JOINSKISS.md  README.md
abcsql-main/examples/chrisdate/db/: db  snap.00000000000045D5
abcsql-main/examples/chrisdate/offdb/: builddb.command  j.sql  p.sql  s.sql  sp.sql  spj.sql  test1.sql  testorderby.sql
abcsql-main/examples/meta_tables/db/: db  snap.0000000000003C84
abcsql-main/examples/meta_tables/offdb/: builddb.command  fk.sql  fkmembers.sql  indexes.sql  indexmembers.sql  show_all.sql  tablecolumns.sql  tables.sql
abcsql-main/examples/personkonto/db/: db  snap.000000000000C859
abcsql-main/examples/personkonto/offdb/: 2020_07_02.csv  dump.csv  dump.sql  export.sql  testcsv.command
abcsql-main/examples/recipes/db/: db  snap.00000000003EE4A8
abcsql-main/examples/recipes/offdb/: badsql.sql  builddb.command  category.sql  categoryandrecipe.sql  ingredient.sql  maintool.rs  recipe.sql  recipestep.sql  recipestepingredient.sql  test1.sql
abcsql-main/src/abcsql/: main.rs  mod.rs
abcsql-main/src/abcsql/applic_folder/: compileargs.rs  csvio.rs  dump_sql.rs  get_storage.rs  go_exec.rs  go_talk.rs  mod.rs  orderby.rs  realmain.rs  show_select.rs
